lod.lobbywatch.ch/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: trifid
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: lobbywatch.zazukoians.org
spec:
  tls:
  - secretName: lod-lobbywatch-ch-cert
    hosts:
    - lod.lobbywatch.ch
  rules:
  - host: lod.lobbywatch.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: trifid
          servicePort: 80
